--- a/assets/css/login-cad.css
+++ b/assets/css/login-cad.css
@@ -52,14 +52,14 @@ form {
         border-radius: 15px;
         text-align: center;
         padding: 1.5rem;
-        box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.705);
+        box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.7);
         z-index: 1;
         font-weight: 600;
         margin-bottom: 5rem;
 
         & .titulo-login-cad {
             margin: 1.5rem;
-            font-size: 2rem;
+            font-size: 3rem;
         }
 
         & label {
@@ -81,7 +81,7 @@ form {
                 font-size: 1.6rem;
                 border-radius: 30px;
                 padding: .8rem 1.5rem;
-                box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.705);
+                box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.5);
             }
 
             & input {
@@ -120,8 +120,7 @@ form {
             border-radius: 15px;
             font-size: 1.6rem;
             background-color: #93CBDB;
-            box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.705);
-            font-weight: 600;
+            box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.5);
 
             &:hover {
                 background-color: #93CBDB;
@@ -138,12 +137,17 @@ form {
             display: flex;
             justify-content: flex-end;
             margin-bottom: 1.5rem;
+            font-size: 1.2rem;
         }
 
         & .p-login-cad {
             margin: .5rem;
             font-family: 'Open Sans', sans-serif;
             font-size: 1.2rem;
+
+            & a {
+                font-size: 1.2rem;
+            }
         }
     }
 }
@@ -283,6 +287,12 @@ form {
         width: 70%;
         margin: auto;
         margin-bottom: 8rem;
+
+        & .login-cad-box {
+            & .titulo-login-cad {
+                font-size: 2.5rem;
+            }
+        }
     }
 }
 
@@ -298,6 +308,12 @@ form {
         width: 80%;
         margin: auto;
         margin-bottom: 5rem;
+
+        & .login-cad-box {
+            & .titulo-login-cad {
+                font-size: 2rem;
+            }
+        }
     }
 
     .div-dupla {
