--- a/assets/css/pagamento.css
+++ b/assets/css/pagamento.css
@@ -1,69 +1,96 @@
+:root{ 
+    --fonte-titulo: 2.5rem;
+    --fonte-subtitulo: 1.4rem;
+    --fonte-paragrafo: 1.4rem;
+}
 .principal{
-    & .titulo_pagamento{
+    & .titulo-pagamento{
         text-align: center;
-        font-size: 2rem;
+        font-size: var(--fonte-titulo);
+        font-weight: 600;
         margin-top: 5rem;
 
     }
 
-    & .p_pagamento{
+    & .p-pagamento{
         font-size: 1.7rem;
         margin: 2rem 0;
     }
 
-    & .op_pagamento{
+    & .op-pagamento{
         font-size: 1.5rem;
             margin: 0 .5rem;
 
             & i {
                 margin: .5rem 1rem;
             }
+            & .op-cartoes{
+                & .cartao-alinhamento{
+                    display: flex;
+                    gap: .5rem;
+                    margin-left: 1rem;
+                }
+                & .info-cartao-cadastrado{
+                    display: flex;
+                    font-size: 1rem;
+                    align-items: center;
+                    & .icone-cartao{
+                        width: 4rem;
+                    }
+                }
+                & .ad-cartao{
+                    font-size: 1rem ;
+                }
+            }
     }
-    & .container_forms{
+    & .container-forms{
         display: flex;
         flex-direction: column;
         gap: 3em;
         margin: 5rem 0;
     }
-    & .itens_forms{
+    & .itens-forms{
         display: flex;
-        flex-direction: column;
 
-        & .label_pagamento{
+        & .label-pagamento{
             font-size: 1.5rem;
+            margin-right: .5rem;
         }
-        & .cod_cartao{
+        & .cod-cartao{
             width: 6rem;
             padding: .4rem .1rem;
+            border-radius: .4rem;
         }
-        & .input_dados{
-            width: 40rem;
+        & .input-dados{
+            width: 70%;
             padding: .4rem .1rem;
+            border-radius: .4rem;
+
         }
         
-        & .container_check{
+        & .containe-check{
             display: flex;
             align-items: center;
         }
-        & .check_salvar{
+        & .check-salvar{
             width: 1em;
         }
-        & .label_check{
+        & .label-check{
             font-size: 1.2rem;
         }
         
     }
-    & .btn_salvar{
+    & .btn-salvar{
         display: block;
         margin: auto;
         background-color: #93CBDB;
         color: #fff;
         font-size: 2rem;
-        padding: 0.8rem 4rem;
-        border-radius: 0.5rem;
+        padding: .8rem 4rem;
+        border-radius: .5rem;
     }
 
-    & .nome_hotel{
+    & .nome-hotel{
         font-size: 1.3rem;
         margin: 3rem 0;
         & span{
@@ -71,13 +98,13 @@
         }
     }
 
-    & .infos_hospedagem{
+    & .infos-hospedagem{
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 1rem;
         
-        & .cards_infos{
+        & .cards-infos{
             border: .1em solid #B0B0B0E5;
             background-color: #fff;
             padding: 1em 1.5em;
@@ -92,58 +119,58 @@
         }
         
     }
-    & .servicos_extras{
-        & .subtitulo_servico{
+    & .servicos-extras{
+        & .subtitulo-servico{
             text-align: center;
-            font-size: 1.4rem;
+            font-size: var(--fonte-subtitulo);
             margin: 5rem 0 3rem;
         }
         
-        & .container_sevicos{
+        & .container-sevicos{
             display: flex;
             gap: 3rem;
             justify-content: space-around;
             flex-wrap: wrap;
         }
-        & .cards_servicos{
+        & .cards-servicos{
             background-color: #93CBDB4D;
             display: flex;
             width: 20rem;
-            align-items: stretch;
-            justify-content: flex-start;
+            justify-content: center;
             gap: 1rem;
-            padding: .5rem 2rem;
-            border-radius: .3rem;
-            & .icons_servicos{
+            padding: 1rem 1.5rem;
+            border-radius: .4rem;
+            & .icons-servicos{
                 width: 2rem;
             }
-            & .tipo_servico{
-                font-size: 1.7rem;
+            & .tipo-servico{
+                font-size: 1.4rem;
             }
         }
-        & .preco_servicos{
+        & .preco-servicos{
             text-align: center;
         }
     }
 
-    & .preco_final{
+    & .preco-final{
         text-align: center;
         
-        & .subtitulo_pagamento{
-            font-size: 1.4rem;
+        & .subtitulo-pagamento{
+            font-size: var(--fonte-subtitulo);
         }
-        & .p_preco_final{
-            font-size: 1.4rem;
+        & .p-preco-final{
+            font-size: var(--fonte-paragrafo);
             margin-top: 2rem;
         }
 
-        & .valor_final{
+        & .valor-final{
             background-color: #FFE03980;
             width: 15rem;
             margin: auto;
             padding: 1rem;
             border-radius: .3rem;
-            margin-top: 3rem;
+            margin-top: 5rem;
+            margin-bottom: 5rem;
             & p{
                 font-size: 1.3rem;
             }
@@ -153,12 +180,149 @@
             }
         }
     }
-    & .btn_confirmar{
+    & .btn-confirmar{
         background-color: #93CBDB;
         color: #fff;
         font-size: 2.5rem;
         padding: 1rem 2rem;
         border-radius: .4rem;
         margin-top: 5rem;
+        margin: auto;
+    }
+    .container-pix{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 2rem;
+        & .qr-code{
+            width: 30%;
+        }
+        & span{
+            font-size: var(--fonte-paragrafo);
+            font-weight: 600;
+        }
+        & .p-pix{
+            font-size: var(--fonte-paragrafo);
+            text-align: center;
+            margin: 1rem 0;
+        }
+        & .btn-pix{
+            background-color: #FF67C5B2;
+            padding: .5rem 1.5rem;
+            font-size: var(--fonte-paragrafo);
+            margin-top: 1rem;
+            border-radius: .4rem;
+        }
+    }
+    
+}
+/* Animação do botão */
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+/* Estilo padrão */
+.btn-salvar, .btn-confirmar {
+    background-color: #93CBDB;
+    color: #fff;
+    font-size: 2rem;
+    padding: 0.8rem 4rem;
+    border-radius: 0.5rem;
+    animation: fadeIn 0.6s ease-out; /* Aplica a animação */
+}
+
+/* Efeito de hover */
+.btn-salvar:hover, .btn-confirmar:hover {
+    background-color: #76b0ca;
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+
+
+
+
+.dados-cartao, .pagamento_pix {
+    display: none;
+}
+
+.modal {
+    position: fixed;
+    top: 10%;
+    left: 10%;
+    right: 10%;
+    width: 80%;
+    height: 85%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color:#ffff;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    border-radius: .4rem;
+    z-index: 2;
+}
+
+.modal-content {
+    padding: 2rem;
+    border-radius: 0.5rem;
+    width: 100%;
+
+    overflow-y: auto;
+    position: relative;
+}
+
+.delete {
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    cursor: pointer;
+}
+
+
+
+@media (max-width: 480px){
+      
+    .principal{
+        .p-pagamento{
+            text-align: center;
+        }
+        /* .forma-pagamento{
+            text-align: center;
+        } */
+        & .nome-hotel{
+            text-align: center;
+        }    
+
+        & .itens-forms{
+            flex-direction: column;
+            align-items: center;
+        }
+        & .container-pix{
+            & .qr-code{
+                width: 50%;
+            }
+        }
+
+    }
+    .modal{
+        left: 10%;
+        right: 10%;
+    }
+}
+@media (max-width: 768px){
+    .principal{
+        & .container-pix{
+            & .qr-code{
+                width: 40%;
+            }
+        }
     }
 }
