--- a/assets/css/cadastro_hospedagem.css
+++ b/assets/css/cadastro_hospedagem.css
@@ -3,11 +3,25 @@
     margin-top: -10px;
 }
 
+main{ 
+    min-width: 320px;
+    max-width: 800px;
+    margin: auto;
+}
+
 body {
     font-size: 25px; 
     line-height: 1.5; 
     font-weight: lighter;
+
 } 
+
+h2 {
+    font-size: 25px;        
+    font-weight: lighter;   
+    margin-bottom: 20px;    
+    margin-top: 20px;
+  } 
 
 h3 {
     font-size: 40px; 
@@ -19,7 +33,7 @@ h3 {
 label {
     display: block;
     margin-top: 10px;
-    color: #777;
+    color: #000000;
     font-weight: lighter;
 }
 
@@ -50,21 +64,7 @@ label {
     margin-bottom:30px;
     
 }
-.input-dias {
-    font-size: 20px;
-    width: 150px; 
-    padding: 8px;
-    border-radius: 10px;
- 
-}
 
-.dias{
-    font-size: 20px;
-    max-width: 20px;
-    padding: 15px;
-    border-radius: 10px;
-
-}
 
 .horario {
     display: flex;
@@ -88,7 +88,87 @@ label {
 
 }
 
+.input-dias {
+    font-size: 20px;
+    width: 150px; 
+    padding: 8px;
+    border-radius: 10px;
+ 
+}
 
+.dias-funcionamento {
+    font-family: Arial, sans-serif;
+    background-color: #f8f8f8;
+    padding: 2px;
+    border-radius: 10px;
+    width: 290px;
+    margin-left: 0px;
+  }
+  
+  .dias-funcionamento h2 {
+    font-size: 25px;
+    margin-bottom: 10px;
+  }
+  
+  .dropdown {
+    position: relative;
+    
+  }
+  
+  .dropdown-button {
+    background-color: #fff;
+    border: 2px solid #ffffff;
+    padding: 8px 16px;
+    width: 100%;
+    border-radius: 10px;
+    cursor: pointer;
+    text-align: left;
+    font-size: 16px;
+  }
+  
+  .dropdown-options {
+    display: none;
+    position: absolute;
+    top: 40px; 
+    width: 100%;
+    background-color: #fff;
+    border: 2px solid #ffffff;
+    border-radius: 5px;
+    z-index: 10;
+  }
+  
+  .dias .dia {
+    display: block;
+    width: 100%;
+    background-color: #ccc;
+    border: none;
+    padding: 8px;
+    text-align: left;
+    cursor: pointer;
+  }
+  
+  .dias .dia:hover {
+    background-color: #ccc;
+  }
+  
+
+  .dropdown.open .dropdown-options {
+    display: block;
+  }
+  
+  .seta {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 10px solid #000; 
+    display: inline-block;
+    margin-left: 95px; 
+  }
+  
+  .seta.aberta {
+    transform: rotate(180deg); 
+  }
 
 .input-cep {
     width: 110px; 
@@ -139,9 +219,12 @@ label {
 .mapa{
     width: 100%;
     border-radius: 8px;
-    margin: 20px auto;
+    margin-left: auto;        
+    margin-right: auto;       
+    margin-bottom: 100px; 
+    margin-top: 30px;
     height: 400px;
-    overflow: hidden;
+    overflow: visible;
     max-width: 800px;
 }
 
@@ -152,49 +235,57 @@ iframe {
 } 
 
 .fotos {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin-top: 10px;
+    display: grid;
+    grid-template-areas:
+      "foto-upload-1 foto-upload-2 foto-upload-3 foto-upload-4"
+      "foto-upload-1 foto-upload-5 foto-upload-6 foto-upload-7";
+    grid-template-columns: 2fr 1fr 1fr 1fr;
+    gap: 10px; 
+  }
+  
+  .foto-upload-1 {
+    grid-area: foto-upload-1;
+    background-color: #ffffff;
+    padding: 40px;
+    text-align: center;
+    min-height: 500px;
     border-radius: 10px;
-}
-
-.foto-upload-1 {
-    width: 500px;
-    height: 500px;
-    background-color: #e9e9e9;
     display: flex;
-    align-items: center;
     justify-content: center;
-    font-size: 1.5em;
-    color: #999;
-    border-radius: 4px;
+    align-items: center;
+    position: relative;
     cursor: pointer;
-    border-radius: 10px;
-}
-
+  }
+  
 .foto-upload-2,
 .foto-upload-3,
 .foto-upload-4,
 .foto-upload-5,
 .foto-upload-6,
-.foto-upload-7,
-.foto-upload-8,
-.foto-upload-9,
-.foto-upload-10 {
-    width: 250px; 
-    height:250px; 
-    background-color: #e9e9e9;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5em;
-    color: #999;
-    border-radius: 10px; 
-    cursor: pointer;
-    margin-bottom: 10px; 
-} 
+.foto-upload-7 {
+  background-color: #ffffff;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+}
 
+  .excluir {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    border: none;
+    padding: 5px 10px;
+    font-size: 20px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
 
 .servicos {
     display: flex;
@@ -265,4 +356,61 @@ iframe {
 
 .btn-adicionar:hover {
     background-color: #82b0a2;
+}
+
+@media (max-width: 768px) {
+
+
+    .input-nome, .input-descricao, .input-valor, .input-dias, 
+    .input-cep, .input-endereço, .input-numero, .input-bairro, .input-cidade {
+        width: 100%;
+    }
+
+    .NBC, .horario {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .fotos {
+      grid-template-areas:
+        "foto-upload-1 foto-upload-1"
+        "foto-upload-2 foto-upload-3"
+        "foto-upload-4 foto-upload-5"
+        "foto-upload-6 foto-upload-7";
+      grid-template-columns: 1fr 1fr;
+    }
+  
+    .foto-upload-1 {
+      min-height: 300px; 
+    }
+  
+    .div-servicos {
+      grid-template-columns: 1fr 1fr;
+      width: 100%; 
+      gap: 0.8rem; 
+    }
+  
+    .btn-salvar {
+      width: 100%; 
+      height: 60px; 
+    }
+}
+  @media (max-width: 480px) {
+
+    .foto-upload-1 {
+        min-height: 250px; 
+    }
+
+ 
+    .div-servicos {
+        grid-template-columns: 1fr;
+        width: 100%;
+        gap: 0.6rem;
+    }
+
+    
+    .btn-adicionar {
+        width: 100%; 
+        height: 90px; 
+    }
 }
