--- a/assets/css/alterar_dados_hospedagem.css
+++ b/assets/css/alterar_dados_hospedagem.css
@@ -7,9 +7,17 @@ body {
     font-size: 25px; 
     line-height: 1.5; 
     font-weight: lighter;
+
 } 
 
-h3 {
+h2 {
+    font-size: 25px;        
+    font-weight: lighter;   
+    margin-bottom: 20px;    
+    margin-top: 20px;
+  } 
+
+h1 {
     font-size: 40px; 
     text-align: center;
     margin-bottom: 50px;
@@ -19,7 +27,7 @@ h3 {
 label {
     display: block;
     margin-top: 10px;
-    color: #777;
+    color: #000000;
     font-weight: lighter;
 }
 
@@ -88,7 +96,87 @@ label {
 
 }
 
+.input-dias {
+    font-size: 20px;
+    width: 150px; 
+    padding: 8px;
+    border-radius: 10px;
+ 
+}
 
+.dias-funcionamento {
+    font-family: Arial, sans-serif;
+    background-color: #f8f8f8;
+    padding: 2px;
+    border-radius: 10px;
+    width: 290px;
+    margin-left: 0px;
+  }
+  
+  .dias-funcionamento h2 {
+    font-size: 25px;
+    margin-bottom: 10px;
+  }
+  
+  .dropdown {
+    position: relative;
+    
+  }
+  
+  .dropdown-button {
+    background-color: #fff;
+    border: 2px solid #ffffff;
+    padding: 8px 16px;
+    width: 100%;
+    border-radius: 10px;
+    cursor: pointer;
+    text-align: left;
+    font-size: 16px;
+  }
+  
+  .dropdown-options {
+    display: none;
+    position: absolute;
+    top: 40px; 
+    width: 100%;
+    background-color: #fff;
+    border: 2px solid #ffffff;
+    border-radius: 5px;
+    z-index: 10;
+  }
+  
+  .dias .dia {
+    display: block;
+    width: 100%;
+    background-color: #ccc;
+    border: none;
+    padding: 8px;
+    text-align: left;
+    cursor: pointer;
+  }
+  
+  .dias .dia:hover {
+    background-color: #ccc;
+  }
+  
+
+  .dropdown.open .dropdown-options {
+    display: block;
+  }
+  
+  .seta {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 10px solid #000; 
+    display: inline-block;
+    margin-left: 95px; 
+  }
+  
+  .seta.aberta {
+    transform: rotate(180deg); 
+  }
 
 .input-cep {
     width: 110px; 
@@ -139,9 +227,12 @@ label {
 .mapa{
     width: 100%;
     border-radius: 8px;
-    margin: 20px auto;
+    margin-left: auto;        /* Centraliza o elemento na horizontal */
+    margin-right: auto;       /* Centraliza o elemento na horizontal */
+    margin-bottom: 100px; 
+    margin-top: 30px;
     height: 400px;
-    overflow: hidden;
+    overflow: visible;
     max-width: 800px;
 }
 
@@ -152,25 +243,33 @@ iframe {
 } 
 
 .fotos {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin-top: 10px;
-    border-radius: 10px;
+  display: grid;
+  grid-template-areas:
+    "foto-upload-1 foto-upload-2 foto-upload-3 foto-upload-4"
+    "foto-upload-1 foto-upload-5 foto-upload-6 foto-upload-7";
+  grid-template-columns: 2fr 1fr 1fr 1fr;
+  gap: 10px; 
 }
 
 .foto-upload-1 {
-    width: 500px;
-    height: 500px;
-    background-color: #e9e9e9;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5em;
-    color: #999;
-    border-radius: 4px;
-    cursor: pointer;
-    border-radius: 10px;
+  grid-area: foto-upload-1;
+  background-color: #ffffff;
+  padding: 20px;
+  text-align: center;
+  min-height: 500px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+}
+.foto-upload-1 img {
+  width: 100%; 
+  height: 100%;
+  object-fit: cover; 
 }
 
 .foto-upload-2,
@@ -178,23 +277,47 @@ iframe {
 .foto-upload-4,
 .foto-upload-5,
 .foto-upload-6,
-.foto-upload-7,
-.foto-upload-8,
-.foto-upload-9,
-.foto-upload-10 {
-    width: 250px; 
-    height:250px; 
-    background-color: #e9e9e9;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5em;
-    color: #999;
-    border-radius: 10px; 
-    cursor: pointer;
-    margin-bottom: 10px; 
-} 
+.foto-upload-7 {
+  background-color: #ffffff;
+  padding: 10px;
+  text-align: center;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  width: 100%; 
+  height: 200px; 
+  overflow: hidden; 
+}
 
+.foto-upload-2 img,
+.foto-upload-3 img,
+.foto-upload-4 img,
+.foto-upload-5 img,
+.foto-upload-6 img,
+.foto-upload-7 img {
+  max-width: 100%; 
+  max-height: 100%; 
+  object-fit: contain; 
+}
+
+
+
+  .excluir {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-color: rgb(255, 255, 255);
+    color: #000000;
+    border: none;
+    padding: 2px 2px;
+    font-size: 20px;
+    border-radius: 100%;
+    cursor: pointer;
+  
+  }
 
 .servicos {
     display: flex;
@@ -266,3 +389,65 @@ iframe {
 .btn-salvar:hover {
     background-color: #82b0a2;
 }
+
+
+@media (max-width: 768px) {
+
+
+    .input-nome, .input-descricao, .input-valor, .input-dias, 
+    .input-cep, .input-endereço, .input-numero, .input-bairro, .input-cidade {
+        width: 100%;
+    }
+
+    .NBC, .horario {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .fotos {
+      grid-template-areas:
+        "foto-upload-1 foto-upload-1"
+        "foto-upload-2 foto-upload-3"
+        "foto-upload-4 foto-upload-5"
+        "foto-upload-6 foto-upload-7";
+      grid-template-columns: 1fr 1fr;
+    }
+  
+    .foto-upload-1 {
+      min-height: 300px; 
+    }
+  
+    .div-servicos {
+      grid-template-columns: 1fr 1fr;
+      width: 100%; 
+      gap: 0.8rem; 
+    }
+  
+    .btn-salvar {
+      width: 100%; 
+      height: 60px; 
+    }
+}
+  @media (max-width: 480px) {
+
+    .foto-upload-1 {
+        min-height: 250px; 
+    }
+
+ 
+    .div-servicos {
+        grid-template-columns: 1fr;
+        width: 100%;
+        gap: 0.6rem;
+    }
+
+    
+    .btn-salvar {
+        width: 100%; 
+        height: 50px; 
+    }
+}
+
+
+  
+
