--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,15 +1,24 @@
+header {
+    width: 100%;
+    height: 12rem;
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    background-color: rgba(248, 244, 237, 0.9);
+}
+
 .info-principal {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 10px;
+    padding: 1rem;
 
     & .nome-sistema {
         font-size: 1.7rem;
 
         & a {
             text-decoration: none;
-        }
+        } 
 
         & h1 {
             color: #93CBDB;
@@ -24,8 +33,7 @@
 
     & .perfil {
         background-color: #FFE03980;
-        width: 6em;
-        height: 2em;
+        width: 8rem;
         border-radius: 20px;
         font-size: 1.5rem;
         padding: 0;
@@ -60,9 +68,11 @@
 
     & .lista-nav {
         display: inline-block;
-        margin: 10px;
+        padding: .5rem 0;
+        text-align: left;
 
         & .link-nav {
+            padding: 1rem;
             color: black;
             text-decoration: 1px underline #FF67C5B2;
             font-size: 1.5rem;
@@ -82,19 +92,22 @@
 
 .principal {
     width: 80%;
-    margin: auto;
+    margin: 12rem auto 0;
 
     & .pesquisa {
         display: flex;
         flex-direction: row;
         justify-content: center;
-        margin: 2rem;
+        padding: 2rem;
 
         & .pesquisa-barra {
+            display: flex;
+            gap: 3px;
+            
             & input {
                 width: 20rem;
                 border-right: 1px solid #93CBDB;
-                padding: 0.56rem 0.7rem;
+                padding: 0.6rem 0.7rem;
                 border-radius: 10px 0 0 10px;
 
                 &:focus {
@@ -103,7 +116,7 @@
             }
 
             & .btn-pesquisa {
-                padding: 0.5rem;
+                padding: 0.6rem;
                 padding-right: 2rem;
                 margin-right: 2.5rem;
                 width: 1.5rem;
@@ -126,8 +139,8 @@
         }
 
         & .btn-filtro {
-            padding: 0.3em;
-            width: 5.5em;
+            padding: 0.3rem;
+            width: 8rem;
             position: relative;
             right: 2.5px;
             border-radius: 10px;
@@ -155,10 +168,10 @@
     & .img-footer {
         text-align: center;
         position: relative;
-        top: 6.6em;
+        top: 6.6rem;
         
         & .cachorro-footer {
-            width: 12em;
+            width: 12rem;
             z-index: 1;
         }    
     }
@@ -173,8 +186,8 @@
         background-color: #93CBDB;
 
         & .info-footer {
-            margin: 10px;
-            padding: 10px;
+            margin: 1rem;
+            padding: 1rem;
             color: white;
             display: block;
             width: 25%;
@@ -182,25 +195,25 @@
             & h2 {
                 font-family: "Potta One", sans-serif;
                 font-weight: 400;
-                margin-bottom: 10px;
+                margin-bottom: 1rem;
                 font-size: 2rem;
             }
 
             & p {
                 font-family: "Quicksand", sans-serif;
                 font-size: 1.5rem;
-                margin-top: 5px;
+                margin-top: .5rem;
             }
 
             & li {
-                padding: 2px;
+                padding: .2rem;
             }
 
             & .info-links {
                 color: white;
                 font-family: "Quicksand", sans-serif;
                 font-size: 1.5rem;
-                margin: 3px;
+                margin: .3rem;
                 overflow-wrap: break-word;
                 word-wrap: break-word;
                 word-break: break-all;
@@ -215,7 +228,6 @@
             & .icon-footer {
                 display: flex;
                 gap: 20px;
-                
             }
         }
     }
@@ -234,13 +246,14 @@
     text-align: center;
     z-index: 1;
     align-items: start;
+    padding: 3rem;
 
     & .menu-a-link {
         color: #fff;
         text-decoration: 1px underline #FF67C5B2;
         font-size: 1.4rem;
         position: relative;
-        top: 3em;
+        top: 3rem;
 
         &:hover {
             text-decoration: 1px underline #93CBDB;
@@ -260,8 +273,8 @@
 
 .menu-icon {
     position: relative;
-    top: 4em;
-    left: 1em;
+    top: 4rem;
+    left: 1rem;
     color: #fff;
 }
 
@@ -295,6 +308,10 @@ i:hover {
 }
 
 @media (max-width: 480px) {
+    header {
+        height: 7.5rem;
+    }
+
     .info-principal {
         & .nome-sistema {
             text-align: center;
@@ -303,7 +320,7 @@ i:hover {
         & .menu-btn {
             display: block;
             position: fixed;
-            right: 1em;
+            right: -2rem;
             z-index: 2;
         }
 
@@ -317,13 +334,15 @@ i:hover {
     }
 
     .principal {
+        margin-top: 7.5rem;
+
         & .pesquisa {
             flex-direction: column;
             margin: auto;
             align-items: center;
 
             & .pesquisa-barra {
-                margin: 1em 0;
+                margin: 1rem 0;
                 text-align: center;
 
                 & input {
@@ -342,17 +361,17 @@ i:hover {
         text-align: center;
 
         & .img-footer {
-            top: 5.6em;
+            top: 5.6rem;
 
             & .cachorro-footer {
-                width:10em;
+                width: 10rem;
             }
         }
 
         & .infos {
             display: flex;
             flex-direction: column;
-            padding: 3em;
+            padding: 3rem;
 
             & .info-footer {
                 width: auto;
@@ -361,7 +380,7 @@ i:hover {
                     display: block;
 
                     & i {
-                        padding: 0 .4em;
+                        padding: 0 .4rem;
                     }
                 }
             }
