--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,7 +1,7 @@
 .principal {
     width: 80%;
-    margin: auto;
-    
+    margin: 12rem auto 0;
+
     & .section-icon-text {
         display: flex;
         justify-content: space-between;
@@ -99,7 +99,7 @@
             }
 
             & a {
-                font-size: 1.4rem;
+                font-size: 1.5rem;
                 color: #000;
             }
         }
@@ -107,8 +107,8 @@
 }
 
 .h2-titulo {
-    font-size: 3rem;
-    margin-bottom: 1em;
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
 }
 
 /* css: main como funciona */
@@ -177,12 +177,8 @@
                 }
             }
         }
-
-        & .h2-titulo {
-            font-size: 2.5rem;
-        }
     }
-
+    
     .como_funciona {
         & .titulo_comofunciona {
             font-size: 3rem;
@@ -192,6 +188,8 @@
 
 @media (max-width: 480px) {
     .principal {
+        margin-top: 7.5rem;
+
         & .section-icon-text {
             display: flex;
             flex-direction: column;
@@ -222,7 +220,6 @@
 
         & .h2-titulo {
             text-align: center;
-            font-size: 2rem;
         }   
     }
 
