--- a/assets/css/login-cad.css
+++ b/assets/css/login-cad.css
@@ -59,7 +59,7 @@ form {
 
         & .titulo-login-cad {
             margin: 1.5rem;
-            font-size: 3rem;
+            font-size: 2.5rem;
         }
 
         & label {
@@ -86,6 +86,7 @@ form {
 
             & input {
                 background-color: transparent;
+                width: 100%;
             }
             
             & i {
@@ -286,12 +287,6 @@ form {
         width: 70%;
         margin: auto;
         margin-bottom: 8rem;
-
-        & .login-cad-box {
-            & .titulo-login-cad {
-                font-size: 2.5rem;
-            }
-        }
     }
 }
 
@@ -307,12 +302,6 @@ form {
         width: 80%;
         margin: auto;
         margin-bottom: 5rem;
-
-        & .login-cad-box {
-            & .titulo-login-cad {
-                font-size: 2rem;
-            }
-        }
     }
 
     .div-dupla {
