--- a/assets/css/planos_precos.css
+++ b/assets/css/planos_precos.css
@@ -1,75 +1,87 @@
-
-.titulo_planos{
-    & h1{
-        font-family:'Quicksand', sans-serif;
-        font-size: 25px;
-        font-weight: 400;
-        padding: 40px 0;
-    }
-    & p{
-        font-size: 14px;
-    }
+.titulo {
     text-align: center;
+    font-size: 3.5rem;
+    padding: 2rem 0;
 }
-.plano_basico, .plano_avancado, .plano_premium{
-    background-color: white;
-    & h3{
-        font-size: 15px;
-        text-align: center;
-        padding: 15px 0;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
 
-    }
-    & ul{
-        padding: 30px 20px 30px 20px ;
-    }
-    & p{
-        text-align: center;
-        padding: 10px 0;
-        font-weight: 900;
-        font-size: 15px;
-    }
-    & span{
-        font-size: 10px;
-        font-weight: 300;
-    }
-    width: 250px;
-    border-radius: 10px;
+.p-texto {
+    font-size: 1.7rem;
+    margin-top: auto;
+}
+
+.p-centro {
+    text-align: center;
+    padding: 1rem 0;
 }
 
 .conteiner_planos{
     display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
     justify-content: center;
-    margin-top: 40px;
+    margin-top: 4rem;
 }
 
-.plano_basico{
-    & h3{
+.plano_basico, .plano_avancado, .plano_premium {
+    background-color: white;
+    width: 250px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+
+    & .nome-plano {
+        font-size: 1.8rem;
+        text-align: center;
+        padding: 1.5rem 0;
+        border-radius: 10px 10px 0 0;
+    }
+
+    & ul {
+        padding: 3rem 2rem;
+
+        & .item-lista {
+            padding: 1rem 0;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+
+            & i {
+                padding: .5rem 1rem 0 0;
+                margin-bottom: auto;
+            }
+        }
+    }
+}
+
+.plano_basico {
+    & .nome-plano {
         background-color: #FFE03980;
+    }
 
-    }
-    & p{
+    & .borda {
         border-top: 0.1px solid #FFE03980;
+        font-weight: bold;
     }
-    margin-right: 20px;
 }
-.plano_avancado{
-    & h3{
+
+.plano_avancado {
+    & .nome-plano {
         background-color: #FF67C5B2;
     }
-    margin-left: 20px;
-    & p{
+
+    & .borda {
         border-top: 0.1px solid #FF67C5B2;
+        font-weight: bold;
     }
 }
-.plano_premium{
-    & h3{
+
+.plano_premium {
+    & .nome-plano {
         background-color: #93CBDB;
     }
-    margin: auto;
-    margin-top: 40px;
-    & p{
+
+    & .borda {
         border-top: 0.1px solid #93CBDB ;
+        font-weight: bold;
     }
 }
