--- a/assets/css/reserva.css
+++ b/assets/css/reserva.css
@@ -1,12 +1,12 @@
 .principal {
     & .titulo-h1 {
-        font-size: 3.2rem;
+        font-size: 3.5rem;
         text-align: center;
-        padding-bottom: 2rem;
+        padding: 2rem 0;
     }
 
     & .section-h2 {
-        font-size: 2.7rem;
+        font-size: 2.5rem;
         font-weight: bold;
         text-align: center;
         padding: 1rem;
@@ -20,7 +20,7 @@
     }
 
     & .section-h3 {
-        font-size: 2.2rem;
+        font-size: 1.8rem;
         text-align: center;
     }
 
@@ -46,7 +46,7 @@
     & .div-servicos {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: 1rem 3rem;
+        gap: 2rem 3rem;
         margin: 1rem auto 2rem;
         width: 80%;
 
@@ -58,6 +58,7 @@
             background-color: #f8f4ec;
             border-radius: 7px;
             border: 1px solid #ff67c5a2;
+            box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.3);
             
             &:hover {
                 background-color: #fff;
@@ -78,7 +79,6 @@
     & .btn-continuar {
         display: block;
         margin: 5rem auto;
-        padding: .5rem 3rem;
         border-radius: 10px;
         background-color: #93CBDB;
 
@@ -92,7 +92,7 @@
         }
 
         & a {
-            font-size: 2.7rem;
+            font-size: 1.7rem;
             font-weight: 200;
             color: black;
             text-decoration: none;
@@ -108,6 +108,7 @@
         padding: .7rem 1rem;
         border: 1px solid #FF67C5B2;
         border-radius: 7px;
+        box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.3);
     }
 
     & form {
