--- a/assets/css/perfil_do_usuario.css
+++ b/assets/css/perfil_do_usuario.css
@@ -1,143 +1,338 @@
-h2 {
-    font-size: 3rem;
-    font-weight: 100;
-    font-family: 'Quicksand', sans-serif;
-    margin-top: 10rem;
+.titulo-secao {
+    font-size: 2.5rem;
+    padding: 2rem 0;
 }
 
-.info_usuario {
+.secoes {
+    margin-bottom: 5rem;
+}
+
+.info-usuario {
+    & .div-inputs {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 0 3rem;
+    }
+}
+
+.itens-perfil {
     display: flex;
     flex-direction: column;
+}
 
-    .itens_usuario {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
+.infos-input {
+    border-radius: 5px;
+    background-image: url(/assets/imagens/img_perfil/icon_form.svg);
+    background-repeat: no-repeat;
+    background-position: 98% 50%;
+    background-size: 12px;
+    padding: .7rem;
+    border: 1px solid #FF67C5B2;
+    box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.3)
+}
 
-    label {
-        font-size: 1.8rem;
-        font-weight: 100;
-    }
+.select,
+.disabled {
+    background-image: none;
+}
 
-    .infos {
-        /* display: flex; */
-        width: 40vw;
-        margin-bottom: 1rem;
-        border-radius: 5px;
-        background-image: url(/assets/imagens/img_perfil/icon_form.svg);
-        background-repeat: no-repeat;
-        background-position: right;
-        background-size: 12px;
-        padding: .7rem;
-    }
+:disabled {
+    background-color: #0000000a;
 
-    .info_tel {
-        width: 15vw;
+    &::placeholder {
+        color: rgba(0, 0, 0, 0.3);
     }
 }
 
-.cards_conteiner {
+.form {
+    width: 100%;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 15;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    background-color: rgba(0, 0, 0, 0.4);
+    overflow: auto;
+}
+
+.box-popup {
+    width: 50%;
+    max-height: 80%;
+    min-height: fit-content;
+    background-color: #fff;
+    margin: auto;
+    position: relative;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
+    padding: 3rem 5rem;
+    overflow: auto;
+
+    & input,
+    & textarea {
+        background-image: none;
+    }
+}
+
+.label {
+    margin-top: 2rem;
+}
+
+.textarea {
+    min-height: 100px;
+    overflow: auto;
+    resize: none;
+}
+
+.collapse {
+    position: relative;
+    border-radius: 5px;
+
+    & .nome-menu {
+        display: flex;
+        flex-direction: row;
+        border-radius: 5px;
+        background: #fff url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24"><path fill="gray" d="M7 10l5 5 5-5H7z"/></svg>') no-repeat right 10px center;
+
+        & i {
+            display: flex;
+            align-items: center;
+            padding: .3rem;
+            margin-left: auto;
+            transform: none;
+
+            &:hover {
+                background-color: rgb(224, 220, 220);
+            }
+        }
+    }
+
+    & .menu-collapse {
+        display: none;
+        position: absolute;
+        z-index: 1;
+        background-color: #fff;
+        width: 100%;
+        border-radius: 5px;
+
+        & .item-menu {
+            padding: .6rem 1rem;
+
+            &:hover {
+            background-color: #93CBDB4D;
+            }
+        }
+    }
+
+    & .show {
+        display: block;
+    }
+}
+
+.lista-menu {
+    border: 1px solid #FF67C5B2;
+}
+
+.p-input {
+    margin: 0 .5rem;
+    
+    & i {
+        margin: .5rem 1rem;
+    }
+}
+
+.show {
+    display: block;
+}
+
+.lado-a-lado {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 0 2rem;
+}
+
+.titulos-form {
+    font-size: 1.8rem;
+    text-align: center;
+    padding: 2rem 0;
+}
+
+.btn-salvar {
+    display: block;
+    margin: 2rem 0 0 auto;
+    border-radius: 10px;
+    background-color: #93CBDB;
+}
+
+.btn-senha {
+    background-color: #FF67C5B2;
+    border-radius: 10px;
+
+    &:disabled {
+        background-color: color-mix(in srgb, #FF67C5B2 50%, #0000000a 50%);
+
+        &:hover {
+            transform: none;
+        }
+    }
+}
+
+.cep {
+    color: black;
+}
+
+.profile-container {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    margin: 20px auto;
+}
+
+.profile-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #0000000a;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    font-weight: 900;
+    color: gray;
+    overflow: hidden;
+    box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.3);
+}
+
+.profile-able {
+    background-color: rgba(250, 250, 250, 0.8);
+    border: 2px solid #FF67C5B2;
+    cursor: pointer;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.profile-image span {
+    display: inline-block;
+    text-align: center;
+}
+
+.cards-conteiner {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
     margin-top: 2rem;
 
-
-
-    & .cards_pet {
+    & .cards-pet {
         background-color: #fff;
-        width: 15rem;
+        width: 18rem;
         border-radius: 5px;
-        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+        box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.7);
         padding: 10px;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        /* Alinha conteúdo à esquerda */
         text-align: left;
-        /* Garante o alinhamento à esquerda para textos */
+        cursor: pointer;
 
-
-        .delete {
+        & .delete {
             position: absolute;
             width: 1.5rem;
-
         }
 
-        .perfil_pet {
+        & .perfil-pet {
             width: 6em;
             align-self: center;
             margin-bottom: 10px;
         }
 
-        p {
+        & p {
             margin: 4px 0;
         }
     }
 
-    .card_adicionar {
+    & .card-adicionar {
         display: flex;
         justify-content: center;
         align-items: center;
 
-        img {
-            width: 6em;
+        & img {
+            width: 8rem;
+        }
+
+        & a {
+            text-decoration: none;
+            color: #000;
+            font-size: 1.5rem;
+            height: 100%;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
     }
 }
 
 .historico {
-    h2 {
+    & h2 {
         margin-bottom: 2rem;
     }
 
-    .conteiner_historico {
+    & .conteiner-historico {
         display: flex;
         justify-content: space-between;
-        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
-        width: 60%;
+        box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.7);
+        width: 70%;
         background-color: #fff;
         border-radius: 5px;
         padding: 1rem;
     }
 
-    h4 {
+    & h4 {
         font-weight: 100;
         font-size: 1.6em;
         margin-bottom: 1rem;
     }
 
-    p {
+    & p {
         font-size: 1.2em;
         margin-bottom: 2rem;
     }
 
-    .data_reserva {}
-
-    img {
+    & img {
         width: 1em;
         margin-left: 2em;
     }
 }
 
-.forma_pagamento {
-
+.forma-pagamento {
     .div-pagamento {
         background-color: #fff;
-        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+        box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.7);
         border-radius: 5px;
-        width: 60%;
+        width: 70%;
         margin-top: 2rem;
         padding: 1rem;
     }
-
+    
     span {
         font-size: 1.5rem;
         margin-bottom: 1rem;
     }
 
-    .bandeira_cartao {
+    .bandeira-cartao {
         width: 4rem;
     }
 
@@ -146,6 +341,13 @@ h2 {
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
+        cursor: pointer;
+        height: 50px;
+    
+        &:hover {
+            background-color: #f0f0f0;
+        }
+
         .cartao-container {
             display: flex;
             flex-direction: row;
@@ -168,35 +370,49 @@ h2 {
     }
 }
 
-@media (max-width: 768px) {}
-
-@media (max-width: 480px) {
-    h2 {
-        text-align: center;
-    }
-    .infos {
-        margin: 0 auto 1rem;
-    }
-    .info_usuario{
-        text-align: center;
+@media (max-width: 768px) {
+    .cards-conteiner {
         justify-content: center;
-    } 
+    }
+
+    .info-usuario .div-inputs {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+    .box-popup {
+        width: 80%;
+        left: 40%;
+    }
+
+    .profile-container {
+        width: 125px;
+        height: 125px;
+    }
+
+    .historico .conteiner-historico,
+    .forma-pagamento .div-pagamento {
+        width: 100%;
+    }
+
     .historico {
-        .conteiner_historico{
+        .conteiner-historico{
             width: 100%;
             gap: 1rem;
-    
-        }
-        
-    }
-    .forma_pagamento{
-        .div-pagamento{
-            width: 100%;
         }
     }
-    .cards_conteiner{
-        .card_adicionar{
-            height: 20rem;
-        }
+}
+
+@media (max-width: 480px) {
+    .titulo-secao {
+        text-align: center;
+    }
+
+    .profile-container {
+        width: 100px;
+        height: 100px;
+    }
+
+    .lado-a-lado {
+        display: block;
     }
 }
