--- a/assets/css/cadastro_pet.css
+++ b/assets/css/cadastro_pet.css
@@ -1,15 +1,14 @@
-.cadastro-pet{
-    & .titulo-pet{
+.cadastro-pet {
+    & .titulo-pet {
         text-align: center;
-        font-size: 2.4rem;
-        margin: 3rem 0;
+        font-size: 3.5rem;
+        padding: 2rem 0 1rem;
     }
-    & .perfil-pet{
+
+    & .perfil-pet {
         text-align: center;
-        & p{
-            font-size: 1.4rem;
-        }
-        & img{
+
+        & img {
             width: 10rem;
             background-color: #D9D9D9;
             padding: 4rem;
@@ -17,90 +16,120 @@
             margin: 1rem 0;
         }
     }
-    & .info-pet{
+
+    & .info-pet {
         display: flex;
         flex-direction: column;
         gap: 1.5rem;
-        margin: 5rem 0 0 15rem;
-        & label{
-            font-size: 1.4rem;
-        }
+        margin: 5rem 0;
 
-        & .nome-pet{
-            width: 30%;
-        }
-        & .input-pet{
-            width: 8rem;
-        }
-        & .icon-info{
+        & .icon-info {
             background-image: url(/assets/imagens/arrow_right.svg);
             background-repeat: no-repeat;
             background-position: right;
             background-size: 1.5rem;
         }
-        & .input-info-pet{
-            width: 5rem;
-        }
-        & .input-temperamento{
-            width: 10rem;
-        }
-        & .info-adicional{
+
+        & .info-adicional {
             display: flex;
             flex-direction: column;
             gap: .5rem;
 
-            & textarea{
+            & textarea {
                 resize: none;
-                width: 70%;
-                height: 7rem;
-            }
-        }
-
-    }
-    & .btn-salvar{
-        background-color: #93CBDB;
-        color: #ffff;
-        font-size: 2rem;
-        width: 20rem;
-        padding: 1.5rem 2.5rem;
-        margin: auto;
-    }
-}
-
-@media (max-width: 768px){
-    .cadastro-pet{
-        & .info-pet{
-            margin: 5rem 0 0 5rem;
-            & .nome-pet{
-                width: 50%;
-            }
-        }
-    }
-}
-
-
-@media (max-width: 480px){
-    .cadastro-pet{
-        & .info-pet{
-            margin: 0;
-            & div{
-                margin: auto;
-            }
-            & .flex-pet{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 1rem;
-            }
-            & .nome-pet{
-                width: 20rem;
-            }
-            & .info-adicional{
-                align-items: center;
                 width: 100%;
+                height: 10rem;
+                overflow: auto;
+                padding: .5rem;
+                border-radius: 10px;
+                border: 1px solid #FF67C5B2;
             }
+        }
+
+    }
+
+    & .btn-salvar {
+        background-color: #93CBDB;
+        margin: 2rem auto;
+        border-radius: 10px;
+    }
+}
+
+.profile-container {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    margin: auto;
+}
+
+.profile-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    font-weight: 900;
+    color: gray;
+    overflow: hidden;
+    box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.3);
+    background-color: rgba(250, 250, 250, 0.8);
+    border: 2px solid #FF67C5B2;
+    cursor: pointer;
+}
+
+.profile-image span {
+    display: inline-block;
+    text-align: center;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+label {
+    display: block;
+}
+
+.lado-a-lado {
+    display: flex;
+    gap: 1rem;
+    justify-content: space-between;
+
+    & div {
+        width: 45%;
+
+        & input {
+            width: 100%;
+            padding: .5rem;
+            border-radius: 10px;
+            border: 1px solid #FF67C5B2;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .lado-a-lado {
+        flex-direction: column;
+
+        & div {
+            width: 100%;
         }
     }
 
+    .profile-container {
+        width: 125px;
+        height: 125px;
+    }
+}
 
+
+@media (max-width: 480px) {
+    .profile-container {
+        width: 100px;
+        height: 100px;
+    }
 }
